# skinDetect

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
instructions/skintrack_oap_starter/: AGENTS.md  README_START_HERE.md
instructions/skintrack_oap_starter/docs/: ARCHITECTURE.md  DECISION_LOG.md  MILESTONES.md  PROJECT_MEMORY.md
instructions/skintrack_oap_starter/prompts/: PR-001-codex-work-order.md
skintrack/: __init__.py  cli.py
skintrack/change/: __init__.py  metrics.py
skintrack/io/: __init__.py  photos.py
skintrack/metadata/: __init__.py  timestamps.py
skintrack/overlap/: __init__.py  candidates.py
skintrack/quality/: __init__.py  images.py
skintrack/regions/: __init__.py  manual.py  projection.py
skintrack/registration/: __init__.py  geometric.py
skintrack/reports/: __init__.py  schemas.py
skintrack/safety/: __init__.py  language.py
skintrack/tracking/: __init__.py  temporal.py
tests/: test_change_metrics.py  test_manual_regions.py  test_overlap_candidates.py  test_package_import.py  test_photo_import.py  test_quality.py  test_region_projection.py  test_registration.py  test_report_schemas.py  test_safety_language.py  test_temporal_tracking.py  test_timestamps.py
