[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "skintrack-change-monitor"
version = "0.1.0"
description = "Backend-first longitudinal skin-photo change monitoring scaffold."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.7,<3",
  "Pillow>=10,<11",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
  "ruff>=0.6,<1",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["skintrack*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

